tests/error/misc_errors/decl_not_empty.py
from guppy.compiler import GuppyModule


module = GuppyModule("test")


@module.declare
def foo(x: int) -> int:
    return x


module.compile(True)
